Contrast issue solved Link touch size and space solved

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -117,6 +117,10 @@ p {
   padding: 2rem;
 }
 
+#content-wrapper a {
+  font-size: var(--button);
+}
+
 #services-wrapper {
   padding: 0 2rem;
 }
@@ -145,7 +149,7 @@ p {
 
 .fountain-blue {
   background-color: var(--fountain-blue);
-  color: var(--white);
+  color: var(--text-color);
   padding: 0.5rem;
 }
 
